--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,7 @@
-FROM nginx
+FROM nginx:latest
 
+COPY ../judger-web/default.conf /etc/nginx/sites-available
+
+CMD ["nginx", "-g", "daemon off;"]
+
+EXPOSE 80
