--- a/judger-api/.gitignore
+++ b/judger-api/.gitignore
@@ -4,7 +4,7 @@
 /uploads
 /newsletters
 /test-files
-
+node_modules
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,linux,macos,webstorm,vscode,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,webstorm,vscode,node
