--- a/judger-api/.env_prod
+++ b/judger-api/.env_prod
@@ -11,34 +11,35 @@ API_APP_LOG_DIR=api_logs
 ####################
 # MongoDB Settings #
 ####################
-MONGO_MAIN_DB_URL<디비 주소>
+MONGO_MAIN_DB_URL=mongodb://localhost/swjudge?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
 MONGO_MAIN_DB_POOL_SIZE=4
 
 ################
 # Kafka Settings #
 ################
-KAFKA_BOOTSTRAP_SERVER<카프카 서버 주소>
-SUBMIT_CLIENT_ID<제출 ID>
-SUBMIT_GROUP_ID<제출 그룹 ID>
-SUBMIT_TOPIC<제출 토픽>
-RESULT_CLIENT_ID<결과 클라이언트 ID>
-RESULT_GROUP_ID<결과 그룹 ID>
-RESULT_TOPIC<결과 토픽>
+KAFKA_BOOTSTRAP_SERVER=kafka:9092
+SUBMIT_CLIENT_ID=submit-consumer
+SUBMIT_GROUP_ID=sumbit-group
+SUBMIT_TOPIC=swjudge-submit
+RESULT_CLIENT_ID=result-producer
+RESULT_GROUP_ID=result-group
+RESULT_TOPIC=swjudge-result
 CODE_BASE_PATH=/source
 OUTPUT_PATH=/source
 
 ###############################
 # Authentication App Settings #
 ###############################
-AUTH_APP_HOST<인증서버 주소>
+AUTH_APP_HOST=https://swauth.cbnu.ac.kr
 
 #########################
 # REST API App Settings #
 #########################
 JUDGE_APP_PORT=4003
-JUDGE_APP_HOST<젓지 API서버 주소>
+JUDGE_APP_HOST=https://swjudgeapi.cbnu.ac.kr
 
 #######################
 # Upload App Settings #
 #######################
-UPLOAD_DIR<업로드 경로>
+UPLOAD_DIR=uploads
+
