--- a/judger-web/Dockerfile.dev
+++ b/judger-web/Dockerfile.dev
@@ -1,8 +1,10 @@
-FROM node:16.13.0 AS build
+FROM node:16.13.0
 
 RUN mkdir -p /app
 
 WORKDIR /app
+
+RUN npm i -g -y @angular/cli
 
 COPY package*.json /app
 
@@ -10,16 +12,6 @@ RUN npm install
 
 COPY . /app
 
-#실서버용 빌드
-#RUN npm run build
+CMD ["ng","serve","--host", "0.0.0.0"]
 
-#디벨롭용
-RUN npm run build:dev
-
-FROM nginx
-
-COPY --from=build app/dist/main /usr/share/nginx/html
-
-COPY nginx/default.dev.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
+EXPOSE 4200
