--- a/judger-api/.env_prod
+++ b/judger-api/.env_prod
@@ -11,7 +11,7 @@ API_APP_LOG_DIR=api_logs
 ####################
 # MongoDB Settings #
 ####################
-MONGO_MAIN_DB_URL=mongodb://localhost/swjudge?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
+MONGO_MAIN_DB_URL=mongodb://host.docker.internal/swjudge?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
 MONGO_MAIN_DB_POOL_SIZE=4
 
 ################
