--- a/judger-web/Dockerfile
+++ b/judger-web/Dockerfile
@@ -4,11 +4,11 @@ RUN mkdir -p /app
 
 WORKDIR /app
 
-COPY package*.json /app
+COPY package*.json /app/
 
 RUN npm install
 
-COPY . /app
+COPY . /app/
 
 RUN npm run build
 
