--- a/judger-web/Dockerfile
+++ b/judger-web/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:16.13.0 AS build
 
-RUN mkdir -p /app
+RUN mkdir -p /app && mkdir -p /etc/nignx/ssl && mkdir -p /etc/nignx/ssl/swjudge.cbnu.ac.kr && mkdir -p /etc/nignx/ssl/swjudgeapi.cbnu.ac.kr
 
 WORKDIR /app
 
@@ -19,6 +19,10 @@ COPY --from=build app/dist/main /usr/share/nginx/html
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
 COPY nginx/ssl/* /etc/nginx/ssl/
+
+COPY nginx/ssl/swjudge.cbnu.ac.kr/* /etc/nginx/ssl/swjudge.cbnu.ac.kr/
+
+COPY nginx/ssl/swjudgeapi.cbnu.ac.kr/* /etc/nginx/ssl/swjudgeapi.cbnu.ac.kr/
 
 EXPOSE 80
 EXPOSE 443
