--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,6 +133,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - ./judger-web/nginx/ssl:/etc/nginx/ssl
     depends_on:
       - judger-api
     links:
