--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - zookeeper
-    command: sh -c "/opt/kafka/bin/kafka-topics.sh --create --topic swjudge-result --zookeeper zookeeper:2181 --partitions 4 --replication-factor 1"
+    command: sh -c "/opt/kafka/bin/kafka-topics.sh --create --topic swjudge-result --bootstrap-server localhost:9092 --partitions 4 --replication-factor 1"
 
   judger1:
     build:
