--- a/judger-api/package.json
+++ b/judger-api/package.json
@@ -10,6 +10,9 @@
     "tool:scoreboard": "node tools/scoreboard.js",
     "clear:log": "rimraf logs"
   },
+  "nodemonConfig": {
+    "ignore": ["uploads/*"]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
