--- a/judger-web/.gitignore
+++ b/judger-web/.gitignore
@@ -1,4 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+/projects/main/src/environments/environment.prod.ts
 
 /projects/main/src/assets/test
 /nginx/default.conf
