--- a/docker-compose-cluster_dev.yml
+++ b/docker-compose-cluster_dev.yml
@@ -124,6 +124,38 @@ services:
       - kafka
       - mongodb
 
+  judger7:
+    build:
+      context: ./judger
+      dockerfile: Dockerfile.dev
+    env_file:
+      - judger/.env
+    volumes:
+      - ./Uploads:/source
+      - ./judger:/app
+    depends_on:
+      - kafka
+      - mongodb
+    links:
+      - kafka
+      - mongodb
+
+  judger8:
+    build:
+      context: ./judger
+      dockerfile: Dockerfile.dev
+    env_file:
+      - judger/.env
+    volumes:
+      - ./Uploads:/source
+      - ./judger:/app
+    depends_on:
+      - kafka
+      - mongodb
+    links:
+      - kafka
+      - mongodb
+
   judger-api:
     build:
       context: ./judger-api
