--- a/docker-compose-cluster_dev.yml
+++ b/docker-compose-cluster_dev.yml
@@ -20,7 +20,7 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_HEAP_OPTS: "-Xms6g -Xmx8g"
       KAFKA_BROKER_ID: 1
-      KAFKA_CREATE_TOPICS: "swjudge-submit:6:1,swjudge-result:6:1"
+      KAFKA_CREATE_TOPICS: "swjudge-submit:6:1,swjudge-resul:6:1"
       KAFKA_JMX_OPTS: "-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=127.0.0.1 -Dcom.sun.management.jmxremote.rmi.port=1099"
       JMX_PORT: 1099
     volumes:
