--- a/judger/Dockerfile.dev
+++ b/judger/Dockerfile.dev
@@ -32,7 +32,7 @@ RUN mkdir -p /kotlin
 ADD kotlin /kotlin
 RUN mkdir -p /java_submit
 RUN mkdir -p /kotlin_submit
-EXPOSE 5000
+#EXPOSE 5000
 EXPOSE 9092
 CMD ["npm", "run", "dev"]
 
