--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -13,17 +13,14 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
+      KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_ADVERTISED_PORT: 9092
       KAFKA_SOCKET_REQUEST_MAX_BYTES: 369295700
-      KAFKA_HEAP_OPTS: "-Xms4g -Xmx6g"
+      KAFKA_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_HEAP_OPTS: "-Xms6g -Xmx8g"
       KAFKA_BROKER_ID: 1
-      KAFKA_CREATE_TOPICS:
-        "swjudge-submit:1:1,\
-         swjudge-result:1:1"
+      KAFKA_CREATE_TOPICS: "swjudge-submit:1:1,swjudge-resul:1:1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
@@ -44,6 +41,34 @@ services:
     links:
       - kafka
       - mongodb
+
+  judger-web:
+    build:
+      context: ./judger-web
+      dockerfile: Dockerfile.dev
+    ports:
+      - "4200:4200"
+    volumes:
+      - ./judger-web:/app
+
+  judger-api:
+    build:
+      context: ./judger-api
+      dockerfile: Dockerfile.dev
+    env_file:
+      - judger/.env
+    ports:
+      - "4003:4003"
+    depends_on:
+      - mongodb
+      - kafka
+    links:
+      - mongodb
+      - kafka
+    volumes:
+      - ./Server-Logs:/usr/src/app/logs
+      - ./Uploads:/usr/src/app/uploads
+      - ./judger-api:/usr/src/app
 
   mongodb:
     build:
