--- a/judger-backend/judger-api/.env_prod
+++ b/judger-backend/judger-api/.env_prod
@@ -1,10 +1,10 @@
 ##################
 # Basic settings #
 ##################
-NODE_ENV=development
-LOG_LEVEL=debug
-#NODE_ENV=production
-#LOG_LEVEL=info
+#NODE_ENV=development
+#LOG_LEVEL=debug
+NODE_ENV=production
+LOG_LEVEL=info
 ROOT_DIR=./
 API_APP_LOG_DIR=api_logs
 
