--- a/docker-compose_prod.yml
+++ b/docker-compose_prod.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./zookeeper/conf:/conf
 
+
   kafka:
     image: wurstmeister/kafka
     expose:
@@ -28,6 +29,7 @@ services:
     depends_on:
       - zookeeper
 
+
   judger-api:
     build:
       context: ./judger-backend/judger-api
@@ -39,10 +41,13 @@ services:
     volumes:
       - /uploads:/usr/src/app/uploads
       - /server-Logs:/usr/src/app/logs
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - kafka
     links:
       - kafka
+
 
   judger-web:
     build:
@@ -58,6 +63,7 @@ services:
     links:
       - judger-api
 
+
   judger1:
     build:
       context: ./judger-backend/judger
@@ -67,6 +73,8 @@ services:
     volumes:
       - /uploads:/source
       - /uploads:/io
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - kafka
     links:
@@ -82,6 +90,8 @@ services:
     volumes:
       - /uploads:/source
       - /uploads:/io
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - kafka
     links:
@@ -97,6 +107,8 @@ services:
     volumes:
       - /uploads:/source
       - /uploads:/io
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - kafka
     links:
@@ -112,6 +124,8 @@ services:
     volumes:
       - /uploads:/source
       - /uploads:/io
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - kafka
     links:
@@ -127,6 +141,8 @@ services:
     volumes:
       - /uploads:/source
       - /uploads:/io
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - kafka
     links:
