--- a/docker-compose_dev.yml
+++ b/docker-compose_dev.yml
@@ -1,49 +1,45 @@
-version: "3.8"
+version: "3.9"
 
 services:
   zookeeper:
     image: zookeeper
-    volumes:
-      - ./zookeeper/conf:/conf
+    
     expose:
       - "2181"
-      - "2888"
-      - "3888"
+
+    volumes:
+      - ./zookeeper/conf:/conf
+
 
   kafka:
     image: wurstmeister/kafka
-    environment:
-      KAFKA_ADVERTISED_HOST_NAME: kafka
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_SOCKET_REQUEST_MAX_BYTES: 369295700
-      KAFKA_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_HEAP_OPTS: "-Xms4g -Xmx8g"
-      KAFKA_BROKER_ID: 1
-      KAFKA_CREATE_TOPICS: "swjudge-submit:1:1, swjudge-result:1:1"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+
     expose:
       - "9092"
+
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    
+    environment:
+      KAFKA_SOCKET_REQUEST_MAX_BYTES: 369295700
+      KAFKA_BROKER_ID: 1
+      
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      
+      KAFKA_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+
+      KAFKA_CREATE_TOPICS: "swjudge-submit:1:1,\
+                            swjudge-result:1:1"
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
+
+      KAFKA_HEAP_OPTS: "-Xms4g -Xmx8g"
+
     depends_on:
       - zookeeper
 
-  judger:
-    build:
-      context: ./judger-backend/judger
-      dockerfile: Dockerfile.dev
-    env_file:
-      - ./judger-backend/judger/.env
-    volumes:
-      - ./judger-backend/judger/Uploads:/source
-      - ./judger-backend/judger:/app
-      - /app/node_modules
-    depends_on:
-      - kafka
-      - mongodb
-    links:
-      - kafka
-      - mongodb
 
   judger-api:
     build:
@@ -51,25 +47,51 @@ services:
       dockerfile: Dockerfile.dev
     env_file:
       - ./judger-backend/judger-api/.env
+
+    ports:
+      - "9001:4003"
+    
+    volumes:
+      - ./judger-backend/judger-api/uploads:/usr/src/app/uploads
+      - ./judger-backend/judger-api/server-Logs:/usr/src/app/logs
+      - ./judger-backend/judger-api:/usr/src/app
+      - /usr/src/app/node_modules
+
     depends_on:
       - kafka
       - mongodb
     links:
       - kafka
       - mongodb
-    ports:
-      - "9001:4003"
+
+
+  judger:
+    build:
+      context: ./judger-backend/judger
+      dockerfile: Dockerfile.dev
+    env_file:
+      - ./judger-backend/judger/.env
+
     volumes:
-      - ./judger-backend/judger-api:/usr/src/app
-      - ./judger-backend/judger-api/uploads:/usr/src/app/uploads
-      - ./judger-backend/judger-api/server-Logs:/usr/src/app/logs
-      - /usr/src/app/node_modules
+      - ./judger-backend/judger/uploads:/source
+      - ./judger-backend/judger/uploads:/io
+      - ./judger-backend/judger:/app
+      - /app/node_modules
+    
+    depends_on:
+      - kafka
+      - mongodb
+    links:
+      - kafka
+      - mongodb
 
   mongodb:
     build:
       context: ./mongo
       dockerfile: Dockerfile
+    
+    ports:
+      - "27017:27017"
+
     volumes:
       - ./mongo/mongodb:/data/db
-    expose:
-      - "27017"
