개발용 auth 서버 구성

--- a/docker-compose_dev.yml
+++ b/docker-compose_dev.yml
@@ -85,6 +85,26 @@ services:
       - kafka
       - mongodb
 
+
+  auth:
+    build:
+      context: ./auth
+      dockerfile: Dockerfile.dev
+
+    ports:
+     - "9000:4000"
+    
+    volumes:
+     - ./auth/server-Logs:/usr/src/app/logs
+     - ./auth:/usr/src/app
+     - /usr/src/app/node_modules
+
+    depends_on:
+      - mongodb
+    links:
+      - mongodb
+
+
   mongodb:
     build:
       context: ./mongo
