--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/eslint-config-prettier": "^6.11.0",
+    "@types/redux-mock-store": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^8.6.0",
