--- a/judger-frontend/Dockerfile.dev
+++ b/judger-frontend/Dockerfile.dev
@@ -6,12 +6,13 @@ WORKDIR /app
 
 RUN npm i -g -y @angular/cli
 
-COPY package*.json /app
+COPY ./package*.json /app/
 
 RUN npm install
 
-COPY . /app
+COPY . /app/
 
-CMD ["ng","serve","--host", "0.0.0.0"]
+CMD ["ng","serve","--host", "0.0.0.0", "--disable-host-check"]
 
 EXPOSE 4200
+EXPOSE 4500
