--- a/docker-compose_dev.yml
+++ b/docker-compose_dev.yml
@@ -68,8 +68,8 @@ services:
       - "host.docker.internal:host-gateway"    
 
     volumes:
-      - ./judger-backend/judger-api/uploads:/usr/src/app/uploads
-      - ./judger-backend/judger-api/server-Logs:/usr/src/app/logs
+      - /uploads:/usr/src/app/uploads
+      - /server-Logs:/usr/src/app/logs
       - ./judger-backend/judger-api:/usr/src/app
       - /usr/src/app/node_modules
 
@@ -90,8 +90,8 @@ services:
       - "host.docker.internal:host-gateway"
 
     volumes:
-      - ./judger-backend/judger-api/uploads:/source
-      - ./judger-backend/judger-api/uploads:/io
+      - /uploads:/source
+      - /uploads:/io
       - ./judger-backend/judger:/app
       - /app/node_modules
     
@@ -112,6 +112,6 @@ services:
       - "host.docker.internal:host-gateway"
     
     volumes:
-     - ./auth/server-Logs:/usr/src/app/logs
+     - /server-Logs:/usr/src/app/logs
      - ./auth:/usr/src/app
      - /usr/src/app/node_modules
