--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ng2-pdf-viewer": "^6.4.1",
     "rxjs": "~6.6.0",
     "socket.io-client": "^4.1.2",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.1.0",
     "xlsx": "^0.17.0",
     "zone.js": "~0.11.3"
