--- a/judger/Dockerfile
+++ b/judger/Dockerfile
@@ -4,7 +4,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 COPY build/java_policy /etc
 RUN buildDeps='software-properties-common git libtool cmake python-dev python3-pip python-pip libseccomp-dev' && \
     apt-get update && apt-get install -y curl zip python python3.8 python-pkg-resources python3-pkg-resources gcc g++ $buildDeps && \
-    add-apt-repository ppa:openjdk-r/ppa && add-apt-repository ppa:longsleep/golang-backports && apt-get update && apt-get install -y golang-go openjdk-8-jdk
+    add-apt-repository ppa:openjdk-r/ppa && add-apt-repository ppa:longsleep/golang-backports && apt-get update && apt-get install -y golang-go openjdk-8-jdk 
 RUN curl -sL https://deb.nodesource.com/setup_10.x | bash -
 RUN apt update
 RUN apt-get -y install build-essential checkinstall wget
@@ -25,17 +25,14 @@ RUN apt-get purge -y --auto-remove $buildDeps && \
 WORKDIR /app
 COPY package*.json ./
 RUN npm i
-RUN npm install -g pm2
+RUN npm install -g nodemon
 COPY . .
 RUN gcc -shared -fPIC -o unbuffer.so unbuffer.c
 RUN mkdir -p /kotlin
 ADD kotlin /kotlin
-RUN chmod 777 -R /kotlin
 RUN mkdir -p /java_submit
-RUN chmod 777 -R /java_submit
 RUN mkdir -p /kotlin_submit
-RUN chmod 777 -R /kotlin_submit
+RUN mkdir -p /judger_submit
 EXPOSE 5000
 EXPOSE 9092
-CMD ["npm", "run", "start"]
-
+CMD ["npm", "run", "dev"]
