--- a/judger/package.json
+++ b/judger/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2-runtime start config/pm2.config.js",
+    "start": "pm2-docker start config/pm2.config.js",
     "dev": "nodemon index.js"
   },
   "repository": {
