Fix: 페이지 별 마이너 업데이트, 모델 수정

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 /projects/main/src/environments/environment.prod.ts
+/projects/main/src/environments/environment.ts
 
 /projects/main/src/assets/test
 /nginx/default.conf
