--- a/docker-compose_prod.yml
+++ b/docker-compose_prod.yml
@@ -1,46 +1,6 @@
 version: "3.9"
 
 services:
-  zookeeper:
-    image: zookeeper
-    
-    expose:
-      - "2181"
-    
-    volumes:
-      - ./zookeeper/conf:/conf
-
-
-  kafka:
-    image: wurstmeister/kafka
-    
-    expose:
-      - "9092"
-    
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-
-    environment:
-      KAFKA_SOCKET_REQUEST_MAX_BYTES: 369295700
-      KAFKA_BROKER_ID: 1
-      
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      
-      KAFKA_ADVERTISED_HOST_NAME: kafka
-
-      KAFKA_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      
-      KAFKA_CREATE_TOPICS: "swjudge-submit:6:1,\
-                            swjudge-result:6:1"
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
-      
-      KAFKA_HEAP_OPTS: "-Xms8g -Xmx16g"
-    
-    depends_on:
-      - zookeeper
-
-
   judger-api:
     build:
       context: ./judger-backend/judger-api
@@ -56,11 +16,6 @@ services:
     volumes:
       - /uploads:/usr/src/app/uploads
       - /server-Logs:/usr/src/app/logs
-    
-    depends_on:
-      - kafka
-    links:
-      - kafka
 
 
   judger-web:
@@ -77,8 +32,6 @@ services:
     
     depends_on:
       - judger-api
-    links:
-      - judger-api
 
 
   judger1:
@@ -94,11 +47,6 @@ services:
     volumes:
       - /uploads:/source
       - /uploads:/io
-    
-    depends_on:
-      - kafka
-    links:
-      - kafka
 
 
   judger2:
@@ -114,11 +62,6 @@ services:
     volumes:
       - /uploads:/source
       - /uploads:/io
-    
-    depends_on:
-      - kafka
-    links:
-      - kafka
 
 
   judger3:
@@ -134,11 +77,6 @@ services:
     volumes:
       - /uploads:/source
       - /uploads:/io
-  
-    depends_on:
-      - kafka
-    links:
-      - kafka
 
 
   judger4:
@@ -154,11 +92,6 @@ services:
     volumes:
       - /uploads:/source
       - /uploads:/io
-    
-    depends_on:
-      - kafka
-    links:
-      - kafka
 
 
   judger5:
@@ -174,11 +107,6 @@ services:
     volumes:
       - /uploads:/source
       - /uploads:/io
-    
-    depends_on:
-      - kafka
-    links:
-      - kafka
 
 
   judger6:
@@ -194,11 +122,6 @@ services:
     volumes:
       - /uploads:/source
       - /uploads:/io
-    
-    depends_on:
-      - kafka
-    links:
-      - kafka
 
 
   judger7:
@@ -214,8 +137,9 @@ services:
     volumes:
       - /uploads:/source
       - /uploads:/io
-    
-    depends_on:
-      - kafka
-    links:
-      - kafka
+
+
+networks:
+  default:
+    name: sw-judger_net
+    external: true
