--- a/docker-compose_dev.yml
+++ b/docker-compose_dev.yml
@@ -1,46 +1,6 @@
 version: "3.9"
 
 services:
-  zookeeper:
-    image: zookeeper
-    
-    expose:
-      - "2181"
-
-    volumes:
-      - ./zookeeper/conf:/conf
-
-
-  kafka:
-    image: wurstmeister/kafka
-
-    expose:
-      - "9092"
-
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    
-    environment:
-      KAFKA_SOCKET_REQUEST_MAX_BYTES: 369295700
-      KAFKA_BROKER_ID: 1
-      
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-
-      KAFKA_ADVERTISED_HOST_NAME: kafka
-      
-      KAFKA_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-
-      KAFKA_CREATE_TOPICS: "swjudge-submit:1:1,\
-                            swjudge-result:1:1"
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
-
-      KAFKA_HEAP_OPTS: "-Xms2g -Xmx6g"
-
-    depends_on:
-      - zookeeper
-
-
   judger-web:
     build:
       context: ./judger-frontend
@@ -73,11 +33,6 @@ services:
       - ./judger-backend/judger-api:/usr/src/app
       - /usr/src/app/node_modules
 
-    depends_on:
-      - kafka
-    links:
-      - kafka
-
 
   judger:
     build:
@@ -94,11 +49,6 @@ services:
       - /uploads:/io
       - ./judger-backend/judger:/app
       - /app/node_modules
-    
-    depends_on:
-      - kafka
-    links:
-      - kafka
 
 
   auth:
@@ -115,3 +65,9 @@ services:
      - /server-Logs:/usr/src/app/logs
      - ./auth:/usr/src/app
      - /usr/src/app/node_modules
+
+
+networks:
+  default:
+    name: sw-judger_net
+    external: true
