--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/core": "~11.2.5",
     "@angular/forms": "~11.2.5",
     "@angular/material": "^11.2.4",
-    "@angular/material-moment-adapter": "^12.0.1",
+    "@angular/material-moment-adapter": "^11.2.13",
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
@@ -28,6 +28,7 @@
     "line-awesome": "^1.3.0",
     "moment": "^2.29.1",
     "ng2-pdf-viewer": "^6.4.1",
+    "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
     "socket.io-client": "^4.1.2",
     "tslib": "^2.1.0",
@@ -41,7 +42,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
     "karma-chrome-launcher": "~3.1.0",
