--- a/judger-frontend/Dockerfile.dev
+++ b/judger-frontend/Dockerfile.dev
@@ -4,7 +4,7 @@ RUN mkdir -p /app
 
 WORKDIR /app
 
-RUN npm i -g -y @angular/cli
+RUN npm i -g -y @angular/cli@11.2.19
 
 COPY ./package*.json /app/
 
